@@ -26,9 +26,9 @@
 
 G_BEGIN_DECLS
 
-void     tracker_log_init               (const char *filename,
-					 gint        verbosity);
-void     tracker_log_shutdown           (void);
+gboolean tracker_log_init     (const char *filename,
+			       gint        verbosity);
+void     tracker_log_shutdown (void);
 
 G_END_DECLS
 
